test/fail/error_option.sest
module ErrorOption = struct

  val f(x) =
    x.foo

  val main(args) =
    f(42)

end
